# curso_fastAPi

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  database.db  entrypoint.sh  pyproject.toml
fast_zero/: database.py  main.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 068d7e8621bc_create_todos_table.py  46412376ba72_create_users_table.py  88b4987a1a16_create_users_table.py  f604203c5cdf_create_users_table.py
